infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: default
spec:
  selector:
    matchLabels:
      app: auth-service
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      hostNetwork: true
      containers:
      - name: auth-service
        image: nahidh597/auth-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: default
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
  - name: auth-service
    protocol: TCP
    port: 8080
    targetPort: 8080
---
